fix: Exercise-03 Use media query to hide overflow on smaller screens

--- a/03-blog-example/assets/style.css
+++ b/03-blog-example/assets/style.css
@@ -160,3 +160,9 @@ a {
 .heading-content {
   position: relative;
 }
+
+@media (max-width: 750px) {
+  main {
+    overflow: hidden;
+  }
+}
